# unofficial_jisho_api

./: Cargo.toml  README.md
src/: api.rs  lib.rs
