[package]
name = "unofficial_jisho_api"
version = "0.1.0"
authors = ["Gabriel Bento <gabrielorigenstdb@gmail.com>"]
edition = "2021"
description = """
An unofficial API for jisho.org.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour_sync = "0.27.1"
