[package]
name = "unofficial_jisho_api"
version = "0.1.0"
authors = ["Gabriel Bento <gabrielorigenstdb@gmail.com>"]
edition = "2021"
description = "An unofficial API for jisho.org inspired by unofficial_jisho_api written in javascript."
repository = "https://github.com/gotneb/unofficial_jisho_api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["blocking"] }
scraper = "0.19.0"
soup = "0.5.1"
